--- a/Homework_2/index.html
+++ b/Homework_2/index.html
@@ -8,7 +8,7 @@
   
   
   <!-- CSS file -->
-  <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
+  <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/donnnnnnieeeeee011012/ass2/main/Homework_2/css/style.css" media="all">
   
 </head>
 <body>
