--- a/Homework_2/index.html
+++ b/Homework_2/index.html
@@ -8,7 +8,7 @@
   
   
   <!-- CSS file -->
-  <link rel="stylesheet" type="text/css" href="/css/style.css" media="all">
+  <link rel="stylesheet" type="text/css" href="css/style.css" media="all">
   
 </head>
 <body>
@@ -17,7 +17,7 @@
 
 <script type="text/javascript">
 
-  var spec2 = "js/choropleth_map.vg.json";
+  var spec2 = "/js/choropleth_map.vg.json";
   vegaEmbed('#choropleth_map', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
