--- a/Homework_3/index.html
+++ b/Homework_3/index.html
@@ -13,15 +13,24 @@
 </head>
 <body>
   
+<div id="interactive_linechart"></div>
 <div id="choropleth_map"></div>
 
 <script type="text/javascript">
+  var spec2 = "/js/interactive_linechart.json";
+  vegaEmbed('#interactive_linechart', spec2).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+</script>
 
+<script type="text/javascript">
   var spec2 = "/js/choropleth_map.vg.json";
   vegaEmbed('#choropleth_map', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
+
+
 
 </body>
 </html>
