--- a/Homework_3/index.html
+++ b/Homework_3/index.html
@@ -8,7 +8,7 @@
   
   
   <!-- CSS file -->
-  <link rel="stylesheet" type="text/css" href="css/style.css" media="all">
+  <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
   
 </head>
 <body>
@@ -17,18 +17,19 @@
 <div id="choropleth_map"></div>
 
 <script type="text/javascript">
+  var spec1 = "/js/choropleth_map.vg.json";
+  
   var spec2 = "/js/interactive_linechart.json";
+
+
   vegaEmbed('#interactive_linechart', spec2).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+  vegaEmbed('#choropleth_map', spec1).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
 
-<script type="text/javascript">
-  var spec2 = "/js/choropleth_map.vg.json";
-  vegaEmbed('#choropleth_map', spec2).then(function(result) {
-    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-  }).catch(console.error);
-</script>
 
 
 
