--- a/Assignment_2/index.html
+++ b/Assignment_2/index.html
@@ -8,7 +8,7 @@
   
   
   <!-- CSS file -->
-  <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
+  <link rel="stylesheet" type="text/css" href="css/style.css" media="all">
   
 </head>
 <body>
@@ -18,9 +18,9 @@
 
 
 <script type="text/javascript">
-  var spec1 = "/js/choropleth_map.vg.json";
+  var spec1 = "js/choropleth_map.vg.json";
   
-  var spec2 = "/js/interactive_linechart.json";
+  var spec2 = "js/interactive_linechart.json";
 
 
   vegaEmbed('#interactive_linechart', spec2).then(function(result) {
