--- a/Assignment_2/index.html
+++ b/Assignment_2/index.html
@@ -106,7 +106,7 @@
 
 
   <script type="text/javascript">
-    var spec1 = "/js/choropleth_map.vg.json";
+    var spec1 = "js/choropleth_map.vg.json";
     
     var spec2 = "/js/interactive_linechart.json";
   
