--- a/Assignment_2/index.html
+++ b/Assignment_2/index.html
@@ -108,13 +108,13 @@
   <script type="text/javascript">
     var spec1 = "js/choropleth_map.vg.json";
     
-    var spec2 = "/js/interactive_linechart.json";
+    var spec2 = "js/interactive_linechart.json";
   
-    var spec3 = "/js/range_dot_plot.json";
+    var spec3 = "js/range_dot_plot.json";
   
-    var spec4 = "/js/scatter_plot.json";
+    var spec4 = "js/scatter_plot.json";
   
-    var spec5 = "/js/stacked_bar_chart.json";
+    var spec5 = "js/stacked_bar_chart.json";
   
   
     vegaEmbed('#choropleth_map', spec1).then(function(result) {
