--- a/Assignment_2/index.html
+++ b/Assignment_2/index.html
@@ -8,7 +8,7 @@
   
   
  
-  <link rel="stylesheet" type="text/css" href="/css/style.css" media="all">
+  <link rel="stylesheet" type="text/css" href="css/style.css" media="all">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
